남먹음식 추가본(수정완료)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,16 @@
             </intent-filter>
         </activity>
 
-    </application>
+    //About Us 액티비티 등록
+    <activity android:name=".AboutUsActivity">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+
+</application>
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
