1. 플로팅버튼 위치 수정 2. 가입 (UserRegister) 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,15 @@
             </intent-filter>
         </activity>
 
+        //가입시 신체정보 액티비티 등록
+        <activity android:name=".UserRegisterBodyInfoActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         //My정보 액티비티 등록
         <activity android:name=".MyInfoActivity">
             <intent-filter>
