MY 운동 메뉴 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,15 @@
             </intent-filter>
         </activity>
 
+        //MyExcercise 액티비티 등록
+        <activity android:name=".MyExerciseActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
 
 </application>
 
