--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -93,6 +94,15 @@
 
         //Myfood 액티비티 등록
         <activity android:name=".MyFoodActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        //Myfood 추가 액티비티 등록
+        <activity android:name=".MyFoodAddActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
