메인화면 게이지바 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -119,6 +119,14 @@
             </intent-filter>
         </activity>
 
+        //메인그래프 액티베이터 등록
+        <activity android:name=".MainGraphActivater">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
 </application>
 
