--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -119,14 +119,15 @@
             </intent-filter>
         </activity>
 
-        //메인그래프 액티베이터 등록
-        <activity android:name=".MainGraphActivater">
+        //MyExcercise 액티비티 등록
+        <activity android:name=".MyFoodAddRecordActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
 
 </application>
 
