--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -138,8 +138,9 @@
             </intent-filter>
         </activity>
 
-        //MyExcercise 액티비티 등록
-        <activity android:name=".MyExerciseAddActivity">
+        //FabExercise 액티비티 등록
+        <activity android:name=".FabExerciseActivity"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -147,14 +148,6 @@
             </intent-filter>
         </activity>
 
-        //MyExcercise 액티비티 등록
-        <activity android:name=".MyExerciseAddRecordActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
 
 
 </application>
