--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,6 +148,15 @@
             </intent-filter>
         </activity>
 
+        //MyExerciseAdd 액티비티 등록
+        <activity android:name=".MyExerciseAddActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         //MyExerciseAddRecord 액티비티 등록
         <activity android:name=".MyExerciseAddRecordActivity">
             <intent-filter>
