--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -176,6 +176,16 @@
             </intent-filter>
         </activity>
 
+        //FabExerciseCalendar 액티비티 등록
+        <activity android:name=".FabExerciseCalendarActivity"
+            android:windowSoftInputMode="adjustPan">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
 
 </application>
 
