--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,21 @@
 apply plugin: 'com.android.application'
 
+
+repositories {
+    mavenCentral()
+}
+
+
+
 android {
     compileSdkVersion 24
     buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.example.kennethelee.nammuk_app"
-        minSdkVersion 14
+        minSdkVersion 24
+        jackOptions {
+            enabled true
+        }
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -16,6 +26,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -36,6 +50,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     compile 'com.google.zxing:core:3.2.1'
+    compile 'com.fatsecret4j:fatsecret-platform:2.0'
+    compile 'com.android.volley:volley:1.0.0'
 }
 
 
