fatsecret 적용 베타버전

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -208,6 +208,17 @@
             </intent-filter>
         </activity>
 
+        //FabFoodDicActivity_test 액티비티 등록
+        <activity android:name=".FoodDicActivity_test"
+            android:windowSoftInputMode="adjustPan">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+
 
 </application>
 
