--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,12 +34,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -52,6 +50,7 @@ dependencies {
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.fatsecret4j:fatsecret-platform:2.0'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.felipecsl.quickreturn:library:1.5.1'
 }
 
 
