MY INFO 사용자정보 표시 - 6/3

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     compile 'com.fatsecret4j:fatsecret-platform:2.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.felipecsl.quickreturn:library:1.5.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 
 
